# pydatastudio

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  settings.json  setup.cfg
conf/: logging.conf  logging.yaml
pydatastudio/: case_formatter.py  driverfactory.py  resourcesmanager.py
pydatastudio/data/: dataframe_utils.py  dataframemanager.py  dataframequerymanager.py  dataframeutils.py
pydatastudio/data/studio/: abstractdatabasicstudent.py  config_studio_builder.py  data_research_utils.py  data_studio.py  data_studio_constants.py  datastudentconfiguration.py  datastudio.py  datastudioconstants.py
pydatastudio/data/studio/editors/: basicexceleditor.py  editorconstants.py  simpleresearchexceleditor.py
pydatastudio/environment/: base_environment.py  baseenvironment.py  context_manager.py  contextmanager.py  environment_config.py  environment_config_management.py  environmentconfig.py  environmentconfigmanagement.py  exceptions.py  pydatastudio.code-workspace
python/pydatastudio/: logging.py
python/pydatastudio/data/: dataframemanager.py  dataframequerymanager.py  dataframeutils.py
python/pydatastudio/environment/: environmentconfig.py
python/test/pydatastudio/: testResourcesManager.py
test/pydatastudio/: testResourcesManager.py  test_resources_manager.py
test/pydatastudio/data/: testDataframeUtils.py  testDataframequerymanager.py  test_dataframe_query_manager.py  test_dataframe_utils.py
test/pydatastudio/environment/: testBaseEnvironment.py  testCaseFormatter.py  test_base_environment.py  test_case_formatter.py
(+25 files in other folders)
