 [metadata]
 # Most metadata is now in pyproject.toml

 [options]
 # Tells setuptools to look for a package in the 'pydatastudio' subdirectory
 packages = find:
 # install_requires and python_requires are also in pyproject.toml,
 # but can be repeated here for older setuptools versions if needed.

 [options.packages.find]
 where = . 
 include = pydatastudio*  
 exclude = test*, examples* 

 # This section is key for installing conf/logging.conf where resourcesmanager.py expects it
 # It installs the local 'conf/logging.conf' file into a 'conf' directory
 # at the root of the installation prefix (e.g., .../site-packages/conf/logging.conf).
 [options.data_files]
 conf = conf/logging.conf 
 
 # To install the License file at the root of site-packages (less common but possible):
 # = LICENSE.md